<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.classicmodels</groupId>
    <artifactId>FlywayDDLDatabase</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <name>FlywayDDLDatabase</name>
    <description>jOOQ artifacts via Flyway and DDLDatabase</description>    

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.7</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        
        <java.version>17</java.version>                
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        
        <jooq.version>3.15.5</jooq.version>
        <codehaus.mojo.version>1.0.0</codehaus.mojo.version>              
    </properties>

    <dependencies>        
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>        
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>        
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq</artifactId>       
            <version>${jooq.version}</version>  
        </dependency>              
        <dependency>  
            <groupId>org.jooq</groupId>
            <artifactId>jooq-meta-extensions</artifactId>
            <version>${jooq.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>            
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>             
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>            
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>                
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>        
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>            
            <plugin>
                <groupId>org.jooq</groupId>
                <artifactId>jooq-codegen-maven</artifactId>               
                <executions>
                    <execution>
                        <id>generate-for-postgresql</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>                                  
                        <configuration xmlns="http://www.jooq.org/xsd/jooq-codegen-3.15.0.xsd">
                            <generator>
                                <database>
                                    <name>org.jooq.meta.extensions.ddl.DDLDatabase</name>
                                    
                                    <!-- The database schema (or in the absence of schema support, in your RDBMS this
                                    can be the owner, user, database name) to be generated. This cannot be combined with the <schemata/> element.                                     
                                    If <inputSchema/> is missing then all schemas will be considered. -->
                                    <inputSchema>PUBLIC</inputSchema>  
                                    
                                    <properties>
            
                                        <!-- Specify the location of your SQL script.
                                        You may use ant-style file matching, e.g. /path/**/to/*.sql
                                        
                                        Where:
                                        - ** matches any directory subtree
                                        - * matches any number of characters in a directory / file name
                                        - ? matches a single character in a directory / file name -->
                                        <property>
                                            <key>scripts</key>
                                            <value>./../../../../db/migration/ddl/postgresql/sql</value>
                                        </property>
        
                                        <!-- The sort order of the scripts within a directory, where:
                                   
                                        - semantic: sorts versions, e.g. v-3.10.0 is after v-3.9.0 (default)
                                        - alphanumeric: sorts strings, e.g. v-3.10.0 is before v-3.9.0
                                        - flyway: sorts files the same way as flyway does
                                        - none: doesn't sort directory contents after fetching them from the directory -->
                                        <property>
                                            <key>sort</key>
                                            <value>flyway</value>
                                        </property>
        
                                        <!-- The default schema for unqualified objects:
                           
                                        - public: all unqualified objects are located in the PUBLIC (upper case) schema
                                        - none: all unqualified objects are located in the default schema (default) 
                                        
                                        This configuration can be overridden with the schema mapping feature -->
                                        <property>
                                            <key>unqualifiedSchema</key>
                                            <value>none</value>
                                        </property>
        
                                        <!-- The default name case for unquoted objects:
                                   
                                        - as_is: unquoted object names are kept unquoted
                                        - upper: unquoted object names are turned into upper case (most databases)
                                        - lower: unquoted object names are turned into lower case (e.g. PostgreSQL) -->
                                        <property>
                                            <key>defaultNameCase</key>
                                            <value>lower</value>
                                        </property>                                                                                                               
                                    </properties>
                                    
                                    <excludes>
                                        flyway_schema_history | akeys | avals | defined | delete.*
                                        | department_topic_arr | dup | employee_office_arr | exist.*                                   
                                        | fetchval | get_avg_sale | get_customer | get_salary_stat
                                        | ghstore.* | gin.* | hs.* | hstore.* | isdefined | isexists
                                        | make_array | new_salary | populate_record | sale_price
                                        | slice.* | swap | tconvert | update_msrp | evaluation_criteria
                                        | rate_type | vat_type | customer_master | each | office_master
                                        | product_master | skeys | svals | top_three_sales_per_employee
                                        | get_offices_multiple | product_of_product_line
                                    </excludes>
                                </database>
                                
                                <!-- Rename the generated POJOs and DAOs classes -->                      
                                <strategy>
                                    <matchers>
                                        <tables>
                                            <table>
                                                <pojoClass>                                                         
                                                    <expression>JOOQ_$0</expression>
                                                    <transform>PASCAL</transform>                                                                                      
                                                </pojoClass>
                                                <daoClass>
                                                    <expression>$0_Repository</expression>
                                                    <transform>PASCAL</transform>                                                                                      
                                                </daoClass>
                                            </table>
                                        </tables>
                                    </matchers>
                                </strategy>
                                
                                <!-- jOOQ will generate POJOs and DAOs in your behalf -->
                                <generate>
                                    <daos>true</daos>                                   
                                    <validationAnnotations>true</validationAnnotations>                            
                                    <springAnnotations>true</springAnnotations>   
                                </generate>
                                
                                <target>
                                    <!-- The destination package of your generated classes (within the destination directory).
                                    jOOQ may append the schema name to this package if generating multiple schemas,
                                    e.g. org.jooq.your.packagename.schema1
                                    org.jooq.your.packagename.schema2 -->
                                    <packageName>jooq.generated</packageName>
            
                                    <!-- The destination directory of your generated classes. Using Maven directory layout here. -->
                                    <directory>target/generated-sources/jooq</directory>
                                </target>
                            </generator>
                        </configuration>
                    </execution>
                </executions> 
            </plugin>
        </plugins>
    </build>
</project>